--- a/Skirmish/.gitignore
+++ b/Skirmish/.gitignore
@@ -8,14 +8,14 @@
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
-/[Uu]ser[Ss]ettings/
-
-# MemoryCaptures can get excessive in size.
-# They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
+/UserSettings/
 
-# Recordings can get excessive in size
-/[Rr]ecordings/
+#Asset meta data should only be ignored when the corresponding asset is also ignored
+!/[Aa]ssets/**/*.meta
+
+#Uncomment this line if you wish to ignore when the corresponding asset is also ignored
+!/[Aa]ssets/AssetStoreTools*
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
